--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
           </ul>
         </div>
         <div class="logo">
-          <img src="images/logo-white.svg" alt="" />
+          <img src="logo-white.svg" alt="" />
         </div>
         <div class="carts">
           <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -65,7 +65,7 @@
     <div class="card container">
       <div class="card_items">
         <div class="card_img">
-          <img src="images/product-1.jpeg" alt="" />
+          <img src="product-1.jpeg" alt="" />
 
           <div class="icon">
             <i class="fa-solid fa-magnifying-glass"></i>
@@ -77,7 +77,7 @@
       </div>
       <div class="card_items">
         <div class="card_img">
-          <img src="images/product-2.jpg" alt="" />
+          <img src="product-2.jpg" alt="" />
           <div class="icon">
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-cart-shopping"></i>
@@ -88,7 +88,7 @@
       </div>
       <div class="card_items">
         <div class="card_img">
-          <img src="images/product-3.jpg" alt="" />
+          <img src="product-3.jpg" alt="" />
           <div class="icon">
             <i class="fa-solid fa-magnifying-glass"></i>
             <i class="fa-solid fa-cart-shopping"></i>
