--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
         </ul>
       </div>
       <div class="logo">
-        <img src="images/logo-black.svg" alt="" />
+        <img src="logo-black.svg" alt="" />
       </div>
       <div class="carts">
         <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
