--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
         </ul>
       </div>
       <div class="logo">
-        <img src="images/logo-black.svg" alt="" />
+        <img src="logo-black.svg" alt="" />
       </div>
       <div class="carts">
         <a href="#"><i class="fa-solid fa-cart-shopping"></i></a>
@@ -80,7 +80,7 @@
         <div class="card">
           <div class="card_items">
             <div class="card_img">
-              <img src="images/product-1.jpeg" alt="" />
+              <img src="product-1.jpeg" alt="" />
               <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -91,7 +91,7 @@
           </div>
           <div class="card_items">
             <div class="card_img">
-              <img src="images/product-2.jpg" alt="" />
+              <img src="product-2.jpg" alt="" />
               <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -102,7 +102,7 @@
           </div>
           <div class="card_items">
             <div class="card_img">
-              <img src="images/product-3.jpg" alt="" />
+              <img src="product-3.jpg" alt="" />
               <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -113,7 +113,7 @@
           </div>
           <div class="card_items">
             <div class="card_img">
-              <img src="images/product-1.jpeg" alt="" />
+              <img src="product-1.jpeg" alt="" />
               <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -124,7 +124,7 @@
           </div>
           <div class="card_items">
             <div class="card_img">
-              <img src="images/product-2.jpg" alt="" />
+              <img src="product-2.jpg" alt="" />
               <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
@@ -135,7 +135,7 @@
           </div>
           <div class="card_items">
             <div class="card_img">
-              <img src="images/product-3.jpg" alt="" />
+              <img src="product-3.jpg" alt="" />
               <div class="icon">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <i class="fa-solid fa-cart-shopping"></i>
